[gd_scene load_steps=4 format=3 uid="uid://dwlxt0iprcf8c"]

[ext_resource type="Script" uid="uid://cbapolihihptn" path="res://ui/bulk_spot_window.gd" id="1_qcqfl"]
[ext_resource type="Texture2D" uid="uid://bah2g2geyw2ks" path="res://icon.svg" id="2_8jjfe"]
[ext_resource type="PackedScene" uid="uid://1igx7b8aya" path="res://ui/animal_box.tscn" id="3_1mdiq"]

[node name="BulkSpotWindow" type="Window"]
transparent_bg = true
title = "Bulk spot insert"
initial_position = 1
size = Vector2i(1000, 500)
transparent = true
script = ExtResource("1_qcqfl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="HSplitContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
split_offset = 1200

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="ImageRect" type="TextureRect" parent="MarginContainer/MainContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_8jjfe")
expand_mode = 1
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/MainContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainContainer/VBoxContainer"]
layout_mode = 2
text = "General"
horizontal_alignment = 1

[node name="GeneralInfoContainer" type="GridContainer" parent="MarginContainer/MainContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="MarginContainer/MainContainer/VBoxContainer/GeneralInfoContainer"]
layout_mode = 2
text = "Date:"

[node name="DateTimeEdit" type="LineEdit" parent="MarginContainer/MainContainer/VBoxContainer/GeneralInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "01-24-2025 14:00:50"

[node name="Label2" type="Label" parent="MarginContainer/MainContainer/VBoxContainer/GeneralInfoContainer"]
layout_mode = 2
text = "Temperature:"

[node name="TemperatureEdit" type="SpinBox" parent="MarginContainer/MainContainer/VBoxContainer/GeneralInfoContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -100.0
suffix = "Â°C"

[node name="Label3" type="Label" parent="MarginContainer/MainContainer/VBoxContainer/GeneralInfoContainer"]
layout_mode = 2
text = "Camera:"

[node name="CameraOptionsButton" type="OptionButton" parent="MarginContainer/MainContainer/VBoxContainer/GeneralInfoContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/MainContainer/VBoxContainer"]
layout_mode = 2
text = "Animals:"
horizontal_alignment = 1

[node name="AnimalControlContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimalBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/VBoxContainer/AnimalControlContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AnimalBox" parent="MarginContainer/MainContainer/VBoxContainer/AnimalControlContainer/AnimalBoxContainer" instance=ExtResource("3_1mdiq")]
layout_mode = 2

[node name="AddNewAnimalButton" type="Button" parent="MarginContainer/MainContainer/VBoxContainer/AnimalControlContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add new animal"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="SkipButton" type="Button" parent="MarginContainer/MainContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Skip"

[node name="SaveAndNextButton" type="Button" parent="MarginContainer/MainContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save & Next"

[node name="PreprocessingContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PreprocessingContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PreprocessingContainer/VBoxContainer"]
layout_mode = 2
text = "Pre-processing..."
horizontal_alignment = 1

[node name="PreprocessingProgress" type="ProgressBar" parent="PreprocessingContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
rounded = true
